--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,10 @@
 body {
   background-color: #16161d;
   font-family: "Montserrat", sans-serif;
+}
+
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
